@@ -93,6 +93,7 @@ This feature was developed by Paarth Agarwal and Thibaud Colas as part of the Go
  * Avoid forgotten password link text conflicting with the supplied aria-label (Thibaud Colas)
  * Fix log message to record the correct restriction type when removing a page view restriction (Rohit Sharma, Hazh. M. Adam)
  * Avoid potential race condition with new Page subscriptions on the edit view (Alex Tomkins)
+ * Use the correct action log when creating a redirect (Thibaud Colas)
 
 ### Documentation
 
